fix gap between product cards

--- a/css/products.css
+++ b/css/products.css
@@ -67,13 +67,14 @@
 .products__list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
+  column-gap: 16px;
   row-gap: 48px;
   margin-top: 12px;
 }
 
 .product-card {
-  width: 46%;
+  width: calc((100% - 16px) / 2);
   max-width: 336px;
   overflow: hidden;
   border: 1px solid #F2F0EF;
@@ -107,15 +108,21 @@
 }
 
 @media (min-width: 600px) {
+  .products__list {
+    column-gap: 24px;
+  }
 
   .product-card {
-    width: 30%;
+    width: calc((100% - 48px) / 3);
   }
 }
 
 @media (min-width: 1024px) {
+  .products__list {
+    column-gap: 32px;
+  }
 
   .product-card {
-    width: 22%;
+    width: calc((100% - 96px) / 4);
   }
 }
